# glaph_slam_experiments

./: CMakeLists.txt  nodelet.xml  package.xml
include/ptx/: graph_slam.h  graph_slam_ros.h  keyframe.h  lidar_odometry.h  log.h  points_insert_criteria_factory.h  points_map.h  queued_points_map.h  registration_factory.h  ros_adaptor.h  ros_utils.h  scan_projector.h  types.h
launch/: node.launch  nodelet.launch
src/: graph_slam.cpp  graph_slam_ros.cpp  graph_slam_ros_node.cpp  graph_slam_ros_nodelet.cpp  lidar_odometry.cpp  pcd_registration.cpp  points_insert_criteria_factory.cpp  queued_points_map.cpp  registration_factory.cpp  scan2cloud_node.cpp
src/points_insert_criteria_factories/: elapsed_time.cpp  manual_trigger.cpp  traveled_distance.cpp
src/registration_factories/: fast_gicp.cpp
